[package]
name = "revshell-rs"
version = "3.0.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
# Désactiver le déroulement de pile = supprime backtrace symbols
overflow-checks = false

[profile.release.package."*"]
opt-level = "z"
